--- a/src/index.css
+++ b/src/index.css
@@ -72,6 +72,8 @@ button:focus-visible {
 #E56346
 #E05C42
 #D44939
+#750D37
+#083D77
 */
 
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
@@ -92,7 +94,7 @@ button:focus-visible {
   border-bottom: 1px solid #f2f2f2;
 }
 .navbar h1 {
-  color: #750D37;
+  color: #5A464C;
 }
 .navbar .links {
   margin-left: auto;
@@ -103,7 +105,7 @@ button:focus-visible {
   padding: 6px;
 }
 .navbar a:hover {
-  color: #750D37;
+  color: #463239;
 }
 .content {
   max-width: 600px;
